Major Rework + Bug fixes

--- a/Perfect Run Champion's Road/sounds.ini
+++ b/Perfect Run Champion's Road/sounds.ini
@@ -176,7 +176,7 @@ file="sound/bowser-killed.ogg"
 
 [sound-45]
 name="SMB3 Game Beat"
-file="sound/game-beat.ogg"
+file="Redc_bgm_Goal02.my.32.dspadpcm.ogg"
 
 [sound-46]
 name="Door"
